--- a/src/partials/colors.scss
+++ b/src/partials/colors.scss
@@ -1,6 +1,7 @@
-$primary: #4c4c4c;
+$primary: #204204;
 $accent: #ffffff;
 $highlight: #d17b0f;
-$link: #9a031e;
+$link: #8d6879;
 $error: red;
 $button: #0e1c00;
+$fontcolor: #818fa0;
